new proj/src/objects/Snapshot__c.object
<CustomObject>
    <description>An object used to associate a fields for Analytic snapshot.</description>
    <fields>
        <fullName>GE_OG_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Snapshot</relationshipLabel>
        <relationshipName>Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_ExpectedOrderDate__c</fullName>
        <label>Expected Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_NPIProgram__c</fullName>
        <label>NPI Program</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_NPIReleaseDate__c</fullName>
        <label>NPI Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_OpportunityAmount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_OG_OpportunityNumber__c</fullName>
        <label>Opportunity Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Snapshot</relationshipLabel>
        <relationshipName>Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Price_Snap__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_OG_ProductQuantity__c</fullName>
        <label>Product Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Snapshot</relationshipLabel>
        <relationshipName>Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_RStatus__c</fullName>
        <label>R Status</label>
        <picklist>
            <picklistValues>
                <fullName>R0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1 Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1 Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3 Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3 Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R0 Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 Interim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iR3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ShipDate__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Low Probability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Med. Probability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - High Probability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Partially Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Snapshot</label>
    <nameField>
        <label>Analytic snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot</pluralLabel>
    <recordTypes>
        <fullName>Opportunity_SnapShot</fullName>
        <active>true</active>
        <description>Opportunity SnapShot</description>
        <label>Opportunity SnapShot</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>